[package]
name = "quantum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
faer = { version = "0.19.4", optional=true }
nalgebra = { version = "0.33.0", optional=true }
ndarray = { version = "0.16.1", optional=true }
clebsch-gordan = { git = "https://github.com/Wleter/clebsch-gordan", optional = true}
num = "0.4.3"


[features]
default = ["units", "params", "selector", "states", "spins"]
units = []
params = []
selector = []
states = []
spins = ["states", "dep:clebsch-gordan"]
nalgebra = ["states", "dep:nalgebra"]
faer = ["states", "dep:faer"]
ndarray = ["states", "dep:ndarray"]